--- a/src/App/pages/main/index.module.scss
+++ b/src/App/pages/main/index.module.scss
@@ -3,4 +3,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 20px;
+
+  &__title {
+    margin-bottom: 20px;
+    align-self: start;
+  }
+
+  &__message {
+    margin-top: 200px;
+  }
 }
