--- a/src/App/shared/ui/components/input/index.module.scss
+++ b/src/App/shared/ui/components/input/index.module.scss
@@ -1,9 +1,37 @@
 @use '/src/theme' as vars;
 
 .common {
-  width: 100%;
-  height: 45px;
   position: relative;
-  border-radius: 15px;
-  border: 1px solid vars.$border-primary;
+  width: 100%;
+
+  &__input {
+    width: 100%;
+    height: 45px;
+    padding-left: 37px;
+    border-radius: 15px;
+    border: 1px solid vars.$border-primary;
+
+    &:focus {
+      border: 1px solid vars.$border-accent
+    }
+
+    &::placeholder {
+      color: vars.$text-pale
+    }
+  }
+
+
+  &__icon {
+    position: absolute;
+    bottom: 12px;
+    left: 16px;
+  }
+
+  &__post-text {
+    position: absolute;
+    font-size: 14px;
+    left: calc(100% - 70px);
+    bottom: 14px;
+    color: vars.$text-pale
+  }
 }
