--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   outline: none;
   border: none;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
 }
 
 body {
@@ -11,8 +16,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 50px;
 }
 
 h1 {
   text: 26px;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
 }
