--- a/src/theme.scss
+++ b/src/theme.scss
@@ -3,9 +3,11 @@ $bg-button-disabled: #7D7D7D;
 
 $text-primary: #474747;
 $text-light: #5C5C5C;
+$text-light-gray: #999999;
 $text-dark: #222222;
 $text-success: #1BDA9D;
 $text-error: #FF8346;
 $text-pale: #D1D1D1;
 
 $border-primary: #EBEBEB;
+$border-accent: #8686FF;
